<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Google Android Courses</string>
    <string name="action_settings">Settings</string>
    <string name="android_developing_comes_to_life">Android Developing Comes to Life !!</string>
    <string name="C1_android_development_for_beginners">C1: Android Development for Beginners</string>
    <string name="lesson_one">Lesson One Apps</string>
    <string name="lesson_two">Lesson Two Apps</string>
    <string name="lesson_three">Lesson Three Apps</string>
    <string name="lesson_four">Lesson Four Apps</string>
    <string name="lesson_five">Lesson Five Apps</string>
    <string name="lesson_six">Lesson Six Apps</string>
    <string name="no_more_app_found">no more app found</string>
    <string name="also_here_no_app_found">Also Here No App Found</string>
    <string name="xd">xD</string>
    <string name="happy_birthday_apk">Happy Birthday app</string>
    <string name="happy_birthday_omy">Happy Birthday, Omy</string>
    <string name="from_dasser">From, Dasser</string>
    <string name="just_java">Just Java</string>
    <string name="quantity">QUANTITY</string>
    <string name="order">Order</string>
    <string name="title_activity_main2_activitydasser">Main2Activitydasser</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="quantity_number">%d</string>
    <string name="title_activity_text">TextActivity</string>
    <string name="court_counter">Court Counter</string>
    <string name="title_activity_court_counter">Court Counter</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="reset">Reset</string>
    <string name="free_throw">Free Throw</string>
    <string name="plus_three_point">+3 Point</string>
    <string name="plus_two_points">+2 Points</string>
    <string name="price">PRICE</string>
    <string name="adv">ADVANCED</string>
    <string name="cookies">Cookies</string>
    <string name="menu">Menu</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="toppings">TOPPINGS</string>
    <string name="chocolate">Chocolate</string>
    <string name="sun_shine">SunShine</string>
    <string name="c2_developing_android_apps">C2: Developing Android Apps</string>
    <string name="vl2">v.l2</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_location">Location</string>
    <string name="pref_location_key">94043</string>
    <string name="pref_location_default">94043</string>
    <string name="pref_units_key">Metric</string>
    <string name="pref_temp_default">Metric</string>
    <string name="action_view_location">View Location</string>
    <string name="action_share">Share</string>
    <string name="sort_by">Sort By</string>
    <string name="pref_units_imperial">Imperial</string>
    <string name="pref_units_metric">Metric</string>
    <string-array name="temp">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
    <string name="ss_app_name">Sunshine</string>
    <string name="ss9_sync_account_type">sunshine.example.com</string>
    <string name="ss9_content_authority">unitedapps.com.googleandroidcourses</string>
    <string name="trailers">Trailers:</string>
    <string name="trailer_space">Trailer </string>
    <string name="pm2_sync_account_type">pop.movies2.com</string>
    <string name="pm2_content_authority">unitedapps.com.googleandroidcourses.pm2</string>
    <string name="pm2_app_name">Popular Movies v2</string>
    <string name="pm1_app_name">Popular Movies v1</string>
    <string name="pm2_savedSortMode">0</string>
    <string name="request_activity_updates">Request Updates</string>
    <string name="remove_activity_updates">Disconnect Updates</string>
    <string name="detected_activities_title">Detected Activities</string>
    <string name="add_geofences">Add Geofence</string>
    <string name="unknown_geofence_error">Unknow Geofence Error</string>
    <string name="geofence_not_available">Geofence Not Avaliable</string>
    <string name="geofence_too_many_geofences">Too Many Geofences</string>
    <string name="geofence_too_many_pending_intents">Too Many Pending Intents</string>
    <string name="geofence_transition_invalid_type">Geofence Transition Invalid Type</string>
    <string name="geofence_transition_entered">Geofence Transition Entered</string>
    <string name="geofence_transition_exited">Geofence Transition Exited</string>
    <string name="unknown_geofence_transition">Unknown Geofence Transition</string>
    <string name="geofence_transition_notification_text">Click notification to returrn to app</string>
    <string name="ab_mca_from_freepik_com">From freepik.com</string>
    <string name="ab_mca_quote"><![CDATA[Love Ur\nWork &\nBe The\nBest]]></string>
    <string name="ab_bdc_quote">Lifelong Learning</string>
    <string name="ab_bdc_business_name">Udacity</string>
    <string name="ab_bdc_business_location">Sebastian Thrun World Economic Forum 2013</string>
    <string name="ab_bdc_business_description">Udacity is a for-profit educational organization founded by Sebastian Thrun, David Stavens, and Mike Sokolsky offering massive open online courses.</string>
    <string name="ab_bdc_business_contact_link">Contact us at <a href="https://www.udacity.com/contact">Udacity.com/Contact</a></string>
    <string name="ab_bdc_business_contact_site">Our Website <a href="https://www.udacity.com">Udacity.com</a></string>
    <string name="ab_ma_m_app_name">Miwok</string>
    <string name="ab_ma_category_phrases">Phrases</string>
    <string name="ab_ma_category_colors">Colors</string>
    <string name="ab_ma_category_numbers">Numbers</string>
    <string name="ab_ma_category_family">Family</string>
    <string name="ab_rc_app_name">Report Card</string>
    <string name="gls_l1_app_name">Location 1</string>
    <string name="gls_l2_1_app_name">Location 2_1</string>
    <string name="gls_gf_app_name">Geofence App</string>
    <string name="gls_ar_app_name">Activity Recognition</string>
    <string name="ab_ma_mp_app_name">MediaPlayer</string>
    <string name="ab_ma_vpe_app_name">ViewPager Example</string>
    <string name="ab_ma_tg_app_name">Alex Tour Guide</string>
    <string name="ab_ma_tg_hotel_1_name">Sheraton Montazah</string>
    <string name="ab_ma_tg_hotel_1_location">Corniche Road, Alexandria, EG-ALX</string>
    <string name="ab_ma_tg_hotel_1_desc">Overlooking the Mediterranean Sea, this refined business hotel is across the street from the beach and a 13-minute walk from Montaza Palace.</string>
    <string name="ab_ma_tg_hotel_1_stars">5 ★</string>
    <string name="ab_ma_tg_hotel_2_name">Alexandria Romance</string>
    <string name="ab_ma_tg_hotel_2_location">303 Tareek El Gueish Saba Pasha, Alexandria</string>
    <string name="ab_ma_tg_place_no_desc">No Description Avaliable :(</string>
    <string name="ab_ma_tg_hotel_2_stars">4 ★</string>
    <string name="ab_ma_tg_hotel_3_name">Acropole</string>
    <string name="ab_ma_tg_hotel_3_location">27 ش الغرفة التجارية، San Stifano, Qism El-Raml, Alexandria Governorate</string>
    <string name="ab_ma_tg_hotel_3_stars">2 ★</string>
    <string name="ab_ma_tg_hotel_4_name">Amoun</string>
    <string name="ab_ma_tg_hotel_4_location">32 El-Nasr, Al Mansheyah Al Kubra, Qism El-Mansheya, Alexandria Governorate</string>
    <string name="ab_ma_tg_hotel_4_stars">3 ★</string>
    <string name="ab_ma_tg_hotel_5_name">Plaza</string>
    <string name="ab_ma_tg_hotel_5_location">394 El-Gaish Rd, San Stifano, Qism El-Raml, Alexandria Governorate</string>
    <string name="ab_ma_tg_hotel_5_rate">4 ★</string>
    <string name="ab_ma_tg_hotel_5_desc">With views of the Mediterranean Sea, this warm hotel overlooking a busy commercial street is a 7-minute walk from the Royal Jewelry Museum, 8 km from Montazah Palace and 9 km from Alexandria International Airport.</string>
    <string name="ab_ma_tg_res_1_name">Samakmak</string>
    <string name="ab_ma_tg_res_1_location">60 Sidi Yakout, As Sayalah Gharb, Qesm Al Gomrok, Alexandria Governorate</string>
    <string name="ab_ma_tg_res_1_rate">4.2 (168 Google reviews)</string>
    <string name="ab_ma_tg_res_2_name">White and Blue</string>
    <string name="ab_ma_tg_res_2_location">Kayetbai, As Sayalah Sharq, Qesm Al Gomrok, Alexandria Governorate</string>
    <string name="ab_ma_tg_res_2_rate">3.9 (14 Google reviews)</string>
    <string name="ab_ma_tg_res_3_name">Chez Gabi</string>
    <string name="ab_ma_tg_res_3_location">As Soyouf Bahri, Qesm Al Montazah, Alexandria Governorate</string>
    <string name="ab_ma_tg_res_3_rate">4.3 (54 Google reviews)</string>
    <string name="ab_ma_tg_res_4_name">Abou El Sid</string>
    <string name="ab_ma_tg_res_4_location">49 Sidi Al Khbashi, Kom Ad Dakah Gharb, Qesm Al Attarin, Alexandria Governorate</string>
    <string name="ab_ma_tg_res_4_rate">4.2 (84 Google reviews)</string>
    <string name="ab_ma_tg_res_5_name">Aroos El Bahr</string>
    <string name="ab_ma_tg_res_5_location">11 Sidi Nasr El-Deen, As Sayalah Sharq, Qesm Al Gomrok, Alexandria Governorate</string>
    <string name="ab_ma_tg_res_5_rate">4.2 (120 Google reviews)</string>
    <string name="ab_ma_tg_his_1_name">Library of Alexandria</string>
    <string name="ab_ma_tg_his_1_desc">The Royal Library of Alexandria or Ancient Library of Alexandria in Alexandria, Egypt, was one of the largest and most significant libraries of the ancient world. It was dedicated to the Muses, the nine goddesses of the arts.</string>
    <string name="ab_ma_tg_his_1_rate">4.7 (1,076 Google reviews)</string>
    <string name="ab_ma_tg_his_1_location">Al Azaritah WA Ash Shatebi, Qesm Bab Sharqi, Alexandria Governorate 21526</string>
    <string name="ab_ma_tg_his_2_name">Roman Auditorium</string>
    <string name="ab_ma_tg_his_2_location">أمام محطة مصرالسكة الحديدية, Kom Ad Dakah Gharb, Qesm Al Attarin, Alexandria Governorateأمام محطة مصرالسكة الحديدية, Kom Ad Dakah Gharb, Qesm Al Attarin, Alexandria Governorate</string>
    <string name="ab_ma_tg_his_2_rate">4.2 (279 Google reviews)</string>
    <string name="ab_ma_tg_his_3_name">Alexandria National Museum</string>
    <string name="ab_n_bla_book_name_or_author_hint">Book Name, or Author</string>
    <string name="ab_n_bla_search">Search</string>
    <string name="ab_n_bla_preform_search_tv">Please preform a search</string>
    <string name="ab_n_qr4_settings_title">Earthquake Settings</string>
    <string name="ab_n_qr4_settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="ab_n_qr4_settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="ab_n_qr4_settings_min_magnitude_default" translatable="false">6</string>
    <string name="ab_n_qr4_settings_order_by_label">Order By</string>
    <string name="ab_n_qr4_settings_order_by_key" translatable="false">order_by</string>
    <string name="ab_n_qr4_settings_order_by_default" translatable="false">@string/ab_n_qr4_settings_order_by_magnitude_value</string>
</resources>