<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="courses.omy.dasser.androidcousres.MainActivity">
    <item
        android:id="@+id/ss3_action_share"
        app:showAsAction="ifRoom"
        android:title="@string/action_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>
    <item
        android:id="@+id/ss3_action_refresh"
        android:orderInCategory="1"
        android:title="@string/action_refresh"
        app:showAsAction="never"/>

    <item
        android:id="@+id/ss3_action_map"
        android:orderInCategory="99"
        android:title="@string/action_view_location"
        app:showAsAction="never"/>
    <item
        android:id="@+id/ss3_action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>
