<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/ab_bdc_quote"
            android:textColor="@android:color/background_light"
            android:textSize="36sp" />

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-5dp"
            android:layout_marginTop="-26dp"
            android:src="@drawable/ab_bdc_udacity_animated_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="10dp"
            android:paddingEnd="36dp"
            android:paddingLeft="36dp"
            android:paddingRight="36dp"
            android:paddingStart="36dp"
            android:text="@string/ab_bdc_business_name"
            android:textSize="22dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="10dp"
            android:paddingEnd="36dp"
            android:paddingLeft="36dp"
            android:paddingRight="36dp"
            android:paddingStart="36dp"
            android:text="@string/ab_bdc_business_description"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ab_bdc_contact_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:drawableLeft="@drawable/ic_location_on_blue_grey_300_24dp"
            android:drawablePadding="18dp"
            android:drawableStart="@drawable/ic_location_on_blue_grey_300_24dp"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="10dp"
            android:paddingEnd="36dp"
            android:paddingLeft="36dp"
            android:paddingRight="36dp"
            android:paddingStart="36dp"
            android:text="@string/ab_bdc_business_location"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/ab_bdc_site_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:autoLink="web"
            android:drawableLeft="@drawable/ic_web_asset_blue_grey_300_24dp"
            android:drawablePadding="18dp"
            android:drawableStart="@drawable/ic_web_asset_blue_grey_300_24dp"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="10dp"
            android:paddingLeft="36dp"
            android:text="@string/ab_bdc_business_contact_site"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="10dp"
            android:paddingLeft="36dp"
            android:text="@string/ab_bdc_business_contact_link"
            android:textSize="16dp"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>