<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/lesson_one"
        android:id="@+id/c1_L1_btn"
        android:layout_gravity="center_horizontal"
        android:onClick="CourseOneLessonOne"
        android:layout_margin="15dp"
        android:textSize="25dp"
        android:background="@android:color/background_light"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/lesson_two"
        android:id="@+id/c1_L2_btn"
        android:layout_gravity="center_horizontal"
        android:onClick="CourseOneLessonTwo"
        android:layout_margin="15dp"
        android:textSize="25dp"
        android:background="@android:color/background_light"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/lesson_three"
        android:id="@+id/c1_L3_btn"
        android:layout_gravity="center_horizontal"
        android:onClick="CourseOneLessonThree"
        android:layout_margin="15dp"
        android:textSize="25dp"
        android:background="@android:color/background_light"/>
</LinearLayout>