<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ab_n_bla_book_search_til"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ab_n_bla_book_name_or_author_hint"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/ab_n_bla_search_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/ab_n_bla_search"
             />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/ab_n_bla_searching_pb"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true"/>

    <ListView
        android:id="@+id/ab_n_bla_books_lv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="4dp"
        android:visibility="gone"/>

    <TextView
        android:text="@string/ab_n_bla_preform_search_tv"
        android:id="@+id/ab_n_bla_empty_view_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"/>


</LinearLayout>