<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:id="@+id/textView3"
        android:textSize="16sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="+"
            android:onClick="Inc"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/quantity_text_view"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="-"
            android:onClick="Dec"
            android:id="@+id/dec_btn"
            android:enabled="false"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:id="@+id/textView4"
        android:textSize="16sp"
        android:paddingTop="16dp"/>

    <TextView
        android:paddingTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$0"
        android:id="@+id/price_text_view"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_marginBottom="16dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:id="@+id/button2"
        android:paddingTop="16dp"
        android:textSize="16sp"
        android:onClick="submitOrder"/>

</LinearLayout>